# AgenticRAG

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.app  Jenkinsfile  README.md  health_check.py  main.py  pyproject.toml  requirements.txt  run.py  setup.py  test_system.py
app/components/: data_loader.py  embeddings.py  llm.py  retriever.py  vector_store.py
app/config/: config.py
app/templates/: application.py
custom_jenkins/: Dockerfile
data/: sample_document.txt
vectorstore/chroma/: chroma.sqlite3
